--- a/fixplaintext/libp2p/protocols/secure/plaintext.html
+++ b/fixplaintext/libp2p/protocols/secure/plaintext.html
@@ -244,6 +244,11 @@ window.addEventListener("DOMContentLoaded", main2);
     SecureConn]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">init
+      <li><a class="reference" href="#init.e%2CPlainText"
+    title="init(p: PlainText)">init(p: PlainText)</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">readMessage
       <li><a class="reference" href="#readMessage.e%2CPlainTextConnection"
     title="readMessage(sconn: PlainTextConnection): Future[seq[byte]]">readMessage(sconn: PlainTextConnection): Future[seq[byte]]</a></li>
@@ -344,9 +349,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixplaintext/libp2p/protocols/secure/plaintext.nim#L57"
+href="https://github.com/status-im/nim-libp2p/tree/fixplaintext/libp2p/protocols/secure/plaintext.nim#L61"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/plaintext.nim#L57" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/plaintext.nim#L61" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -366,6 +371,18 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/status-im/nim-libp2p/tree/fixplaintext/libp2p/protocols/secure/plaintext.nim#L36"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/plaintext.nim#L36" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="init.e,PlainText" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#init.e%2CPlainText"><span class="Identifier">init</span></a><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <a href="plaintext.html#PlainText"><span class="Identifier">PlainText</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/fixplaintext/libp2p/protocols/secure/plaintext.nim#L57"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/plaintext.nim#L57" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -405,7 +422,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-16 11:02:11 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-16 11:08:23 UTC</small>
       </div>
     </div>
   </div>
