--- a/fixnodelay/libp2p/transports/tcptransport.html
+++ b/fixnodelay/libp2p/transports/tcptransport.html
@@ -210,7 +210,7 @@ window.addEventListener("DOMContentLoaded", main2);
   servers*: seq[StreamServer]
   clients: array[Direction, seq[StreamTransport]]
   flags: set[ServerFlags]
-  clientFlags: set[ServerFlags]
+  clientFlags: set[TransportFlags]
   acceptFuts: seq[Future[StreamTransport]]">TcpTransport</a></li>
   <li><a class="reference" href="#TcpTransportTracker"
     title="TcpTransportTracker = ref object of TrackerBase
@@ -310,7 +310,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">servers</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">StreamServer</span><span class="Other">]</span>
   <span class="Identifier">clients</span><span class="Other">:</span> <span class="Identifier">array</span><span class="Other">[</span><span class="Identifier">Direction</span><span class="Other">,</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">StreamTransport</span><span class="Other">]</span><span class="Other">]</span>
   <span class="Identifier">flags</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">ServerFlags</span><span class="Other">]</span>
-  <span class="Identifier">clientFlags</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">ServerFlags</span><span class="Other">]</span>
+  <span class="Identifier">clientFlags</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">TransportFlags</span><span class="Other">]</span>
   <span class="Identifier">acceptFuts</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">StreamTransport</span><span class="Other">]</span><span class="Other">]</span>
 </pre></dt>
 <dd>
@@ -474,7 +474,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-16 14:33:56 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-16 14:43:57 UTC</small>
       </div>
     </div>
   </div>
